--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 <body>
 {% include 'navbar.html' %}
 <br/>
-<div class="container">
+<div class="container" id="container">
 <div class="row">
 <div class="col">
     <img src="{% static 'images/logo_CHC.png' %}" style="width: 260px; margin-left: -30px;" alt="chclogo" />
