--- a/templates/base.html
+++ b/templates/base.html
@@ -23,20 +23,14 @@
 <div class="container" id="container">
 <div class="row">
 <div class="col">
+    <nonscript>
     <img src="{% static 'images/logo_CHC.png' %}" style="width: 260px; margin-left: -30px;" alt="chclogo" />
+    </nonscript>
     {% block content %}
     {% endblock %}
 </div>
 </div>
 </div>
-{#    <script type="text/javascript" src="{% static 'js/call.js' %}"/>#}
-<script>
-    const container = document.querySelector("#container");
-        container.addEventListener('load', e => {
-        //prevent default action
-         e.preventDefault();
-        })
-</script>
 
 
 </body>
