--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,9 @@
 <div class="container" id="container">
 <div class="row">
 <div class="col">
-    <nonscript>
+    <noscript>
     <img src="{% static 'images/logo_CHC.png' %}" style="width: 260px; margin-left: -30px;" alt="chclogo" />
-    </nonscript>
+    </noscript>
     {% block content %}
     {% endblock %}
 </div>
