edit page reload

--- a/templates/call.html
+++ b/templates/call.html
@@ -29,5 +29,12 @@
     setInterval(function(){
        window.location.reload();
     },3000);
+/*
+    const container = document.querySelector("#container");
+    container.addEventListener('load', e => {
+    //prevent default action
+     e.preventDefault();
+    });
+*/
 </script>
 {% endblock %}
