--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,3 +5,15 @@
     display: inline-flex;
     /*background-color: yellow;*/
 }
+
+body{
+    /*background-color: red;*/
+    background-image: url("/static/images/logo_CHC.png");
+    background-size: 250px 100px;
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-attachment: fixed;
+    height: 9px; /*100vh*/
+    margin-top: 66px;
+
+}
