--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 <div class="row">
 <div class="col">
 
-    <img src="{% static 'images/logo_CHC.png' %}" style="width: 260px; margin-left: -30px;" alt="chclogo" />
+{#    <img src="{% static 'images/logo_CHC.png' %}" style="width: 260px; margin-left: -30px;" alt="chclogo" />#}
 
     {% block content %}
     {% endblock %}
