--- a/templates/call.html
+++ b/templates/call.html
@@ -3,20 +3,26 @@
 {% block head %}
 {#   <meta http-equiv="refresh" content="3">#}
    <link rel="stylesheet" href="{% static 'css/call.css' %}">
+
 {% endblock %}
 {% block content %}
 <h1>線上叫號</h1>
 {% for num in num_list %}
 <div id="border" class="md-6">
     <span class="call" style="margin-bottom: 10px;"> {{ num.num }} </span>
+    <div style="font-size: 14px;margin-top: 20px; width: 500px; margin-left: -100px;text-align: left">為不造成群聚，請依照線上叫號之數字往<strong style="color:red; text-decoration: underline; text-decoration-color:red;text-decoration-thickness: 3px;">後5號內</strong>再行前往。<br/> 例：顯示12號，請13、14、15、16、17號至現場預備。</div>
 </div>
 {% endfor %}
+<br/>
+<br/>
 <br/>
 <h1>現場叫號</h1>
 {% for onspotNum in onspotNum_list %}
 <div id="border" class="md-6">
     <span class="call" style="margin-bottom: 10px;"> {{ onspotNum.onspot_num }} </span>
+
 </div>
+
 {% endfor %}
 {#    {{ num.stamp }}#}
 
@@ -24,17 +30,24 @@
      <span style="margin-top: 90px;">現在時間：</span> <span id="time"></span>
      <div style="margin-top:5px;"><a href="{% url 'login' %}" class="top-menu">管理員登入<span class="glyphicon glyphicon-lock"></span></a></div>
 
-{#    <script type="text/javascript" src="{% static 'js/call.js' %}"/>#}
-<script type="text/javascript">
+
+{#    <script type="text/javascript" src="{% static 'js/portal.js' %}"/>#}
+
+    <script type="text/javascript" >
+     const today = new Date();
+    const currentHours = ("0" + today.getHours()).slice(-2);
+    const currentMinutes = ("0" + today.getMinutes()).slice(-2);
+    const time =currentHours +":"+ currentMinutes;
+    p = document.getElementById("time")
+    p.innerHTML = time
+
+    //reload page
     setInterval(function(){
        window.location.reload();
     },3000);
-/*
-    const container = document.querySelector("#container");
-    container.addEventListener('load', e => {
-    //prevent default action
-     e.preventDefault();
-    });
-*/
-</script>
+    </script>
+
+
+
+
 {% endblock %}
