--- a/templates/call.html
+++ b/templates/call.html
@@ -10,7 +10,7 @@
 {% for num in num_list %}
 <div id="border" class="md-6">
     <span class="call" style="margin-bottom: 10px;"> {{ num.num }} </span>
-    <div style="font-size: 12px;margin-top: 20px; width: 320px; margin-left: -90px;text-align: left">為不造成群聚，請依照線上叫號之數字往<strong style="color:red; text-decoration: underline; text-decoration-color:red;text-decoration-thickness: 3px;">後5號內</strong>再行前往。<br/> 例：顯示12號，請13、14、15、16、17號至現場預備。</div>
+    <div style="font-size: 14px;margin-top: 20px; width: 320px; margin-left: -90px;">為避免群聚，請依線上叫號數字往<strong style="color:red; text-decoration: underline; text-decoration-color:red;text-decoration-thickness: 3px;"> 後5號內 </strong>前往。<br/> 例：顯示12號，請13-17號至現場預備。</div>
 </div>
 {% endfor %}
 <br/>
