--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,5 +15,7 @@ body{
     /*background-attachment: fixed;*/
     height: 9px; /*100vh*/
     margin-top: 66px;
-
+}
+html, body{
+    height: 100%;
 }
