--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,7 +21,7 @@ html, body{
     /*margin-left: -36px;*/
 }
 
-@media (max-width: 1080px) {
+@media (min-width: 1080px) {
     body{
         /*background-color: red;*/
         background-image: url("/static/images/logo_CHC.png");
