--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,20 +21,5 @@ html, body{
     /*margin-left: -36px;*/
 }
 
-@media (min-width: 1080px) {
-    body{
-        /*background-color: red;*/
-        background-image: url("/static/images/logo_CHC.png");
-        background-size: 300px 120px;
-        background-repeat: no-repeat;
-        background-position: center top;
-        /*background-attachment: fixed;*/
-        height: 9px; /*100vh*/
-        margin-top: 68px;
-        color: red;
-    }
-    html, body{
-        height: 100%;
-        margin-left: -36px;
-    }
-}
+
+@import url(color.css) screen and (min-width: 1000px);
