add css for screen width greater than 1000px

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,6 @@
 }
 
 body{
-    /*background-color: red;*/
     background-image: url("/static/images/logo_CHC.png");
     background-size: 250px 100px;
     background-repeat: no-repeat;
@@ -20,6 +19,21 @@ html, body{
     height: 100%;
     /*margin-left: -36px;*/
 }
+@media only screen and (min-width: 1000px){
+    body{
+    background-image: url("/static/images/logo_CHC.png");
+    background-size: 250px 100px;
+    background-repeat: no-repeat;
+    background-position: center top;
+    /*background-attachment: fixed;*/
+    height: 9px; /*100vh*/
+    margin-top: 68px;
+    }
 
+html, body{
+    height: 100%;
+    margin-left: -36px;
+}
+}
 
-@import url(color.css) screen and (min-width: 1000px);
+/*@import url(color.css) screen and (min-width: 1000px);*/
