--- a/static/css/call.css
+++ b/static/css/call.css
@@ -13,3 +13,40 @@
     font-size: 40px;
     font-family: 'Anton', sans-serif;
 }
+.note{
+    font-size: 14px;
+    margin-top: 20px;
+    width: 320px;
+    margin-left: -90px;
+    text-aligns: center;
+}
+
+@media only screen and (min-width: 1000px){
+    #border{
+    border-radius: 2.5%;
+    width: 480px;
+    height: 300px;
+    padding: 12px;
+    text-align: center;
+    background: #000000;
+    border: 5px solid #006446;
+    }
+    .call{
+        color: #ff0000;
+        text-align: center;
+        font-size: 220px;
+        font-family: 'Anton', sans-serif;
+    }
+    .title{
+        font-size: 120px;
+        margin-left: 8px;
+    }
+    .note{
+        padding-top: 10px;
+        font-size: 24px;
+        margin-top: 20px;
+        width: 600px;
+        margin-left: -60px;
+        text-align: center;
+    }
+}
