--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 {% include 'navbar.html' %}
 <br/>
 <div class="container" id="container">
-<div class="row">
+<div class="row" id="row">
 <div class="col">
 
 {#    <img src="{% static 'images/logo_CHC.png' %}" style="width: 260px; margin-left: -30px;" alt="chclogo" />#}
