--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,7 +19,7 @@ html, body{
     height: 100%;
     margin-left: 55px;
 }
-@media only screen and (min-width: 1920px){
+@media only screen and (min-width: 1080px){
     body{
     background-image: url("/static/images/logo_CHC.png");
     background-size: 620px 260px;
@@ -45,7 +45,7 @@ html, body{
     .row{
         width: 100%;
         justify-content: center;
-        /*background-color: lightblue;*/
+        background-color: lightblue;
         margin-top: 200px;
         margin-left: 350px;
     }
