--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,40 +22,40 @@ html, body{
     height: 100%;
     margin-left: 55px;
 }
-.row{
-    background-color: yellow;
-}
+/*.row{*/
+/*    background-color: yellow;*/
+/*}*/
 @media only screen and (min-width: 540px){
     body{
     background-image: url("/static/images/logo_CHC.png");
-    background-size: 600px 240px;
+    background-size: 588px 240px;
     background-repeat: no-repeat;
     background-position: center top;
     /*background-attachment: fixed;*/
     height: 9px; /*100vh*/
     margin-top: 55px;
-    margin-left: 5px;
+    /*margin-left: 60px;*/
     }
 
     html, body{
         height: 100%;
-        margin-left: -90px;
+        margin-left: -70px;
+        /*background-color: lightblue;*/
     }
-/*.container{*/
-/*    justify-content: center;*/
-/*    width: 100%;*/
-/*    height: auto;*/
-/*    !*display: inline-flex;*!*/
-/*    background-color: yellow;*/
-/*    margin-top: 200px;*/
-/*}*/
+    html{
+        margin-top: -60px;
+        /*background-color: lightblue;*/
+    }
+
     .row{
-        width: 100%;
-        justify-content: center;
-        background-color: lightblue;
+        width: 540px;
+        /*justify-content: center;*/
+        text-align: center;
+        /*background-color: lightblue;*/
         /*margin-top: 80px;*/
-        margin-left: 500px;
-        margin-right: 300px;
+        /*margin-left: 450px;*/
+        /*margin-right: 300px;*/
+
     }
 }
 
