--- a/static/css/call.css
+++ b/static/css/call.css
@@ -6,7 +6,7 @@
     text-align: center;
     background: #000000;
     border: 2.5px solid #006446;
-    margin-left: 96px;
+    margin-left: 80px;
 }
 .call{
     color: #ff0000;
@@ -18,15 +18,11 @@
     font-size: 14px;
     margin-top: 20px;
     width: 320px;
-    margin-left: -90px;
+    margin-left: -5px;
     text-aligns: center;
+    /*justify-content: center;*/
 }
-/* #time_style{*/
-/*    font-size: 14px;*/
-/*    margin-top: 22px;*/
-/*    width: 320px;*/
-/*    text-aligns: center;*/
-/*}*/
+
 @media only screen and (min-width: 540px){
     #border{
     border-radius: 2.5%;
@@ -36,6 +32,7 @@
     text-align: center;
     background: #000000;
     border: 5px solid #006446;
+    margin-left: 96px;
     }
     .call{
         color: #ff0000;
@@ -54,5 +51,6 @@
         width: 600px;
         margin-left: 15px;
         text-align: center;
+            /*margin-left: -90px;*/
     }
 }
