--- a/static/css/call.css
+++ b/static/css/call.css
@@ -22,6 +22,9 @@
     text-aligns: center;
     /*justify-content: center;*/
 }
+.title{
+    padding-top: 10px;
+}
 
 @media only screen and (min-width: 540px){
     #border{
