--- a/static/css/call.css
+++ b/static/css/call.css
@@ -12,7 +12,8 @@
     color: #ff0000;
     text-align: center;
     font-size: 40px;
-    font-family: 'Anton', sans-serif;
+    font-family: 'Days One', sans-serif;
+    font-size: 100px;
 }
 .note{
     font-size: 14px;
@@ -40,8 +41,8 @@
     .call{
         color: #ff0000;
         text-align: center;
-        font-size: 95px;
-        font-family: 'Anton', sans-serif;
+        /*font-size: 20px;*/
+        font-family: 'Days One', sans-serif;
     }
     .title{
         font-size: 80px;
