--- a/static/css/call.css
+++ b/static/css/call.css
@@ -11,9 +11,8 @@
 .call{
     color: #ff0000;
     text-align: center;
-    font-size: 40px;
-    font-family: 'Days One', sans-serif;
-    font-size: 100px;
+    font-size: 30px;
+    font-family: 'Noto Sans', sans-serif;
 }
 .note{
     font-size: 14px;
@@ -21,10 +20,12 @@
     width: 320px;
     margin-left: -5px;
     text-aligns: center;
+    font-family: 'Noto Sans TC', sans-serif;
     /*justify-content: center;*/
 }
 .title{
     padding-top: 20px;
+    font-family: 'Noto Sans TC', sans-serif;
 }
 
 @media only screen and (min-width: 540px){
@@ -42,11 +43,12 @@
         color: #ff0000;
         text-align: center;
         /*font-size: 20px;*/
-        font-family: 'Days One', sans-serif;
+        font-family: 'Noto Sans', sans-serif;
     }
     .title{
         font-size: 80px;
         margin-left: 8px;
+        font-family: 'Noto Sans TC', sans-serif;
     }
     .note{
         padding-top: 10px;
@@ -55,6 +57,7 @@
         width: 600px;
         margin-left: 15px;
         text-align: center;
+        font-family: 'Noto Sans TC', sans-serif;
             /*margin-left: -90px;*/
     }
 }
