--- a/static/css/call.css
+++ b/static/css/call.css
@@ -42,7 +42,7 @@
     .call{
         color: #ff0000;
         text-align: center;
-        /*font-size: 20px;*/
+        font-size: 100px;
         font-family: 'Noto Sans', sans-serif;
     }
     .title{
