--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,10 +32,11 @@ html{
     body{
     background-image: url("/static/images/logo_CHC.png");
     /*background-size: 680px 110px;*/
-    background-size: 420px 160px;
+    background-size: 380px 140px;
     background-repeat: no-repeat;
     background-position: left top;
-    height: 9px; /*100vh*/
+    height: 20px; /*100vh*/
+    /*height: 9px; !*100vh*!*/
     margin-top: 60px;
     margin-left: 8px;
     /*margin-left: 60px;*/
@@ -45,6 +46,7 @@ html{
     html, body{
         height: 100%;
         margin-left: -20px;
+
         /*background-color: lightblue;*/
     }
     html{
@@ -56,7 +58,7 @@ html{
         width: 540px;
         text-align: center;
         /*padding-top: -30px;*/
-        padding-left: 25px;
+        padding-left: 15px;
         margin-top: -50px;
         /*background-color: lightblue;*/
         /*margin-top: 80px;*/
