--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-{% include 'navbar.html' %}
+{#{% include 'navbar.html' %}#}
 <br/>
 <div class="container" id="container">
 <div class="row" id="row">
