--- a/templates/call.html
+++ b/templates/call.html
@@ -27,9 +27,9 @@
 
     <br/>
     <div id="time_style">
-     <span style="font-size: 20px; font-family: 'Noto Sans TC', sans-serif;">現在時間：</span> <span style="font-size: 14px; font-family: 'Noto Sans TC', sans-serif;" id="time"></span>
+     <span style="font-size: 20px; font-family: 'Noto Sans TC', sans-serif;">現在時間：</span> <span style="font-size: 20px; font-family: 'Noto Sans TC', sans-serif;" id="time"></span>
 {#        <span style="margin-top: 90px;">現在時間：</span> <span ></span>#}
-     <div style="margin-top:5px;font-family: 'Noto Sans TC', sans-serif;"><a href="{% url 'login' %}" class="top-menu" style="text-decoration: none;color: whitesmoke;">管理員登入<span class="glyphicon glyphicon-lock"></span></a></div>
+     <div style="margin-top: 85px;font-family: 'Noto Sans TC', sans-serif;"><a href="{% url 'login' %}" class="top-menu" style="text-decoration: none;color: rgba(245,40,145,0.02);">管理員登入<span class="glyphicon glyphicon-lock"></span></a></div>
     </div>
 
 {#    <script type="text/javascript" src="{% static 'js/portal.js' %}"/>#}
