--- a/static/css/call.css
+++ b/static/css/call.css
@@ -33,7 +33,7 @@
     border-radius: 2.5%;
     width: 400px;
     height: 180px;
-    padding: 10px;
+    padding-top: 5px; /*10px*/
     text-align: center;
     background: #000000;
     border: 5px solid #006446;
@@ -42,7 +42,7 @@
     .call{
         color: #ff0000;
         text-align: center;
-        font-size: 100px;
+        font-size: 135px;
         font-family: 'Noto Sans', sans-serif;
     }
     .title{
