--- a/templates/call.html
+++ b/templates/call.html
@@ -11,7 +11,7 @@
 <div id="border" class="md-6">
     <span class="call" style="margin-bottom: 10px;"> {{ num.num }} </span>
 </div>
-    <div class="note" >為避免群聚，請依<strong> &uarr; </strong>叫號數字往<strong style="color:red; text-decoration: underline; text-decoration-color:red;text-decoration-thickness: 3px;"> 後5號內 </strong>再前往。<br/> 例：顯示12號，請13-17號至現場預備。</div>
+    <div class="note" >為避免群聚，請依<strong> &uarr; </strong>叫號數字往<span style="color:red; text-decoration: underline; text-decoration-color:red;text-decoration-thickness: 3px;"> 後5號內 </span>再前往。<br/> 例：顯示12號，請13-17號至現場預備。</div>
 {% endfor %}
 <br/>
 
@@ -35,7 +35,7 @@
 {#    <script type="text/javascript" src="{% static 'js/portal.js' %}"/>#}
 
     <script type="text/javascript" >
-     const today = new Date();
+    const today = new Date();
     const currentHours = ("0" + today.getHours()).slice(-2);
     const currentMinutes = ("0" + today.getMinutes()).slice(-2);
     const time =currentHours +":"+ currentMinutes;
